--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <header>interactive art space!</header>
         <div id="art-container">
             <!-- Art! -->
-            <img src="/images/wolf_green.png" id="image1" class="art-image" alt="Art Image 1">
-            <img src="/images/wolf_outline.png" id="image2" class="art-image" alt="Art Image 2">
-            <img src="/images/wolf_dots.png" id="image3" class="art-image" alt="Art Image 3">
-            <img src="/images/wolf_grey.png" id="image4" class="art-image" alt="Art Image 4">
-            <img src="/images/wolf_selfie.png" id="image5" class="art-image" alt="Art Image 5">
-            <img src="/images/star_arthurpx.gif" id="image6" class="art-image" alt="Art Image 6">
-            <img src="/images/ghost_arthurpx.gif" id="image7" class="art-image" alt="Art Image 7">
+            <img src="images/wolf_green.png" id="image1" class="art-image" alt="Art Image 1">
+            <img src="images/wolf_outline.png" id="image2" class="art-image" alt="Art Image 2">
+            <img src="images/wolf_dots.png" id="image3" class="art-image" alt="Art Image 3">
+            <img src="images/wolf_grey.png" id="image4" class="art-image" alt="Art Image 4">
+            <img src="images/wolf_selfie.png" id="image5" class="art-image" alt="Art Image 5">
+            <img src="images/star_arthurpx.gif" id="image6" class="art-image" alt="Art Image 6">
+            <img src="images/ghost_arthurpx.gif" id="image7" class="art-image" alt="Art Image 7">
         </div>
 
         <div id="controls">
